internal/gatewayapi/testdata/gateway-with-unsupported-address-type.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
      addresses:
        - type: NamedAddress
          value: foo
        - type: IPAddress
          value: 1.2.3.4
