internal/gatewayapi/testdata/gateway-with-unsupported-address-type.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    addresses:
    - type: NamedAddress
      value: foo
    - type: IPAddress
      value: 1.2.3.4
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      port: 80
      protocol: HTTP
  status:
    conditions:
    - lastTransitionTime: null
      message: 'Gateway has an address with an unsupported type: NamedAddress'
      reason: UnsupportedAddress
      status: "False"
      type: Accepted
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway-1: {}
